--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <button id="sizebtn">Change Grid Size</button>
         <div id="container"></div>
         <button id ='reset'>reset</button>
+        <button id="colorbtn">Random Colour</button>
         <script src="./app.js"></script>
         
     
